--- a/Lesson_3_Task_3.ipynb
+++ b/Lesson_3_Task_3.ipynb
@@ -428,12 +428,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_pred_proba (W,X):\n",
+    "def calc_pred (W,X):\n",
     "    X = calc_std_feat(X)\n",
     "    y_pred_proba = sigmoid(np.dot(W.T, X))>0.5\n",
     "    return [1 if i else 0 for i in y_pred_proba ]\n",
     "\n",
-    "result_1 = calc_pred_proba(W,X)"
+    "result_1 = calc_pred(W,X)",
+    "result_1"
    ]
   },
   {
